4 Tiberium Crystal Formation Block, Slabs, Stairs, and walls.

-Added Logs, Wood, & leaves for Plagued Wood
-Added Ember Oak Blocks, and Deco Blocks
-Added Dead Blocks, and Deco Blocks
-Added Marika Oak Blocks, and Deco Blocks *

-Re-added Tiberium Blossom Tree

-Added Signs and Hanging signs for all Wood Types

*Note: This is The Glow Tree by Che Carter, renamed as a Gag on the Erd Tree. Used with Permission...
considering I helped make it...the Glow tree that is. The reference to Elden Ring is for Laughs.

------------------------------------------------------------------------------

9/08/2024 - 9/12/2024
Version 0.4.7
Posted By: Dalton Carter

-Added Custom Particle handling.



======================================================
LEGACY 1.16.5 Changelog
0.5.2
======================================================
 (0.1 - 0.5): 10/08/2023 - 3/20/2024
 Changelog initiated:
 - Separated Crystal Tech mod from, Tutorial mod and Glowing Tree 16.5 mod.
 - Blossom Trees, Spread Logic, Tiberium Crops, Flower of Life, Deco Blocks, basic items,
 fluids, Ores, plagued weapons, Gundanium Armor, horse armor, Tags, Ore Gen, Tree gen, structure gen, and all associated
 textures, loot tables, and recipes added/created.
 -Added License and ReadMe

 (0.5.2): 3/22/2024
 - Explosion effect added when mining Blue, Red, and Purple Tiberium without a silk touch pickaxe.
 - Tiberium crop texture changed to Cross render type.
 - Fixed Tiberium and Ichor soil Sustain Plant Logic. Blocks now only accept specific plants/ certain types of Tiberium.
 - Began adding Tiberium Infection logic to Tiberium/Ichor soil, created necessary Mod Tags for infection logic,
 which will include Plagued Logs infecting other logs and leaves, and Plagued Leaves infecting other leaves.
 - Added explosion resistance to appropriate blocks. I.E Mod Metal blocks, Tiberium/Ichor Soil, and Blossom Trees.
 - Updated License and Readme.
 - Credits File Added.