@@ -1,0 +1,92 @@
+package com.CartersDev.crystechmod.particle.custom;
+
+import net.minecraft.client.multiplayer.ClientLevel;
+import net.minecraft.client.particle.*;
+import net.minecraft.core.particles.SimpleParticleType;
+import net.minecraftforge.api.distmarker.Dist;
+import net.minecraftforge.api.distmarker.OnlyIn;
+import org.jetbrains.annotations.Nullable;
+
+
+@OnlyIn(Dist.CLIENT)
+public class EmberParticles extends TextureSheetParticle {
+    private static final float ACCELERATION_SCALE = 0.0025F;
+    private static final int INITIAL_LIFETIME = 300;
+    private static final int CURVE_ENDPOINT_TIME = 300;
+    private static final float FALL_ACC = 0.25F;
+    private static final float WIND_BIG = 2.0F;
+    private float rotSpeed;
+    private final float particleRandom;
+    private final float spinAcceleration;
+
+    protected EmberParticles(ClientLevel pLevel, double pX, double pY, double pZ, SpriteSet pSpriteSet, double v3, double v4, double v5) {
+        super(pLevel, pX, pY, pZ);
+        this.setSprite(pSpriteSet.get(this.random.nextInt(12), 12));
+        this.rotSpeed = (float)Math.toRadians(this.random.nextBoolean() ? -30.0 : 30.0);
+        this.particleRandom = this.random.nextFloat();
+        this.spinAcceleration = (float)Math.toRadians(this.random.nextBoolean() ? -5.0 : 5.0);
+        this.lifetime = 300;
+        this.gravity = 7.5E-4F;
+        float $$5 = this.random.nextBoolean() ? 0.05F : 0.075F;
+        this.quadSize = $$5;
+        this.setSize($$5, $$5);
+        this.friction = 1.0F;
+    }
+
+    public ParticleRenderType getRenderType() {
+        return ParticleRenderType.PARTICLE_SHEET_OPAQUE;
+    }
+
+    public void tick() {
+        this.xo = this.x;
+        this.yo = this.y;
+        this.zo = this.z;
+        if (this.lifetime-- <= 0) {
+            this.remove();
+        }
+
+        if (!this.removed) {
+            float $$0 = (float)(300 - this.lifetime);
+            float $$1 = Math.min($$0 / 300.0F, 1.0F);
+            double $$2 = Math.cos(Math.toRadians((double)(this.particleRandom * 60.0F))) * 2.0 * Math.pow((double)$$1, 1.25);
+            double $$3 = Math.sin(Math.toRadians((double)(this.particleRandom * 60.0F))) * 2.0 * Math.pow((double)$$1, 1.25);
+            this.xd += $$2 * 0.0024999999441206455;
+            this.zd += $$3 * 0.0024999999441206455;
+            this.yd -= (double)this.gravity;
+            this.rotSpeed += this.spinAcceleration / 20.0F;
+            this.oRoll = this.roll;
+            this.roll += this.rotSpeed / 20.0F;
+            this.move(this.xd, this.yd, this.zd);
+            if (this.onGround || this.lifetime < 299 && (this.xd == 0.0 || this.zd == 0.0)) {
+                this.remove();
+            }
+
+            if (!this.removed) {
+                this.xd *= (double)this.friction;
+                this.yd *= (double)this.friction;
+                this.zd *= (double)this.friction;
+            }
+        }
+    }
+
+
+
+    public static class Provider implements ParticleProvider<SimpleParticleType> {
+        private final SpriteSet sprites;
+        public Provider(SpriteSet spriteSet) {
+            this.sprites = spriteSet;
+        }
+
+        @Override
+        public @Nullable Particle createParticle(SimpleParticleType simpleParticleType, ClientLevel clientLevel, double v, double v1, double v2, double v3, double v4, double v5) {
+            return new EmberParticles(clientLevel, v, v1, v2, this.sprites, v3, v4, v5);
+        }
+
+//        @Override
+//        public @Nullable Particle createParticle(SimpleParticleType pType, ClientLevel pLevel, double pX, double pY,
+//                                                 double pZ, double pXSpeed, double pYSpeed, double pZSpeed) {
+//            return new GlowParticles(pLevel, pX, pY, pZ, this.sprites,pXSpeed, pYSpeed, pZSpeed);
+//        }
+    }
+
+}
