@@ -1,0 +1,16 @@
+{
+  "textures": [
+    "crystechmod:ember_0",
+    "crystechmod:ember_1",
+    "crystechmod:ember_2",
+    "crystechmod:ember_3",
+    "crystechmod:ember_4",
+    "crystechmod:ember_5",
+    "crystechmod:ember_6",
+    "crystechmod:ember_7",
+    "crystechmod:ember_8",
+    "crystechmod:ember_9",
+    "crystechmod:ember_10",
+    "crystechmod:ember_11"
+  ]
+}
