@@ -1,0 +1,16 @@
+{
+  "textures": [
+    "crystechmod:marika_0",
+    "crystechmod:marika_1",
+    "crystechmod:marika_2",
+    "crystechmod:marika_3",
+    "crystechmod:marika_4",
+    "crystechmod:marika_5",
+    "crystechmod:marika_6",
+    "crystechmod:marika_7",
+    "crystechmod:marika_8",
+    "crystechmod:marika_9",
+    "crystechmod:marika_10",
+    "crystechmod:marika_11"
+  ]
+}
