@@ -363,6 +363,7 @@ Version 0.4.7
 Posted By: Dalton Carter
 
 -Added Custom Particle handling.
+-Added Custom Particles for the Marika Oak, and Ember Oak.
 
 
 
